2007-01-15 [colin]	2.7.1cvs3

	* src/etpan/imap-thread.c
		Fix invalid free on command-connection
		error

2007-01-15 [wwp]	2.7.1cvs2

	* src/matcher_parser_lex.l
	* src/quote_fmt_lex.l
	* src/matcher_parser_parse.y
		fix copyright header in lexers and parsers.

2007-01-15 [paul]	2.7.1cvs1

	* NEWS
	* README
	* RELEASE_NOTES
	* configure.ac
		bump up version number following
		stable release

2007-01-15 [paul]	2.7.0cvs31

	* AUTHORS
	* src/gtk/authors.h
		add Fabien to the Team list
		add the recent contributors
		make a few corrections

2007-01-15 [paul]	2.7.0cvs30

	* src/mainwindow.c
		fix compiler warning
	* src/plugins/pgpcore/prefs_gpg.c
	* src/plugins/pgpcore/prefs_gpg.h
		add missing include
		fix copyright header

2007-01-14 [colin]	2.7.0cvs29

	* src/gtk/filesel.c
		Use the 'gtk+' backend. Avoids gnome-vfs use,
		two benefits: faster to open, will fix strange
		dbus-related crash. Thanks to Pascal Terjan.

2007-01-14 [colin]	2.7.0cvs28

	* src/etpan/imap-thread.c
		Delete the old imap just after allocating
		the new one. Makes sure we don't get the
		same pointer by sheer luck, which feels
		strange in the debug log.

2007-01-14 [colin]	2.7.0cvs27

	* src/gtk/inputdialog.c
		Make sure we don't print passwords in
		clear text when in debug mode

2007-01-14 [colin]	2.7.0cvs26

	* src/gtk/gtksctree.c
		Fix bug 1098, 'bogus last row display 
		after expanding a thread'. Patch by
		Jindrich Makovicka <makovick@gmail.com>

2007-01-14 [colin]	2.7.0cvs25

	* src/etpan/imap-thread.c
		Close socket manually before
		freeing the imap struct

2007-01-14 [colin]	2.7.0cvs24

	* src/etpan/imap-thread.c
		Maybe fix new reconnection issues

2007-01-13 [colin]	2.7.0cvs23

	* src/summaryview.c
		Freeze/thaw on thread selection

2007-01-13 [paul]	2.7.0cvs22

	* src/mainwindow.c
	* src/summaryview.c
	* src/summaryview.h
		add 'Edit/Delete thread'

2007-01-13 [colin]	2.7.0cvs21

	* src/prefs_account.c
	* src/prefs_compose_writing.c
	* src/prefs_message.c