@@ -1549,6 +1549,9 @@ static gint imap_scan_tree(Folder *folder)
 
 	if (folder->node)
 		item = FOLDER_ITEM(folder->node->data);
+	if (item && !item->path && root_folder) {
+		item->path = g_strdup(root_folder);
+	}
 	if (!item || ((item->path || root_folder) &&
 		      strcmp2(item->path, root_folder) != 0)) {
 		folder_tree_destroy(folder);
